# ROS2

./: clean_ws.sh  create_ros2_ws.sh  note.txt  readme.md
Event/: data.back.txt  data.txt  plot_gps.py  start.sh
Event/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Event/install/trajectory_visualization/lib/trajectory_visualization/: trajectory_node
Event/install/trajectory_visualization/share/trajectory_visualization/: local_setup.sh  package.sh
Event/install/trajectory_visualization/share/trajectory_visualization/cmake/: trajectory_visualizationConfig.cmake
Event/log/: latest_build
Event/trajectory_ws/install/: local_setup.sh  setup.sh
Event/trajectory_ws/install/trajectory_visualization/lib/trajectory_visualization/: trajectory_node
Event/trajectory_ws/install/trajectory_visualization/share/trajectory_visualization/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
Event/trajectory_ws/install/trajectory_visualization/share/trajectory_visualization/cmake/: trajectory_visualizationConfig-version.cmake  trajectory_visualizationConfig.cmake
Event/trajectory_ws/install/trajectory_visualization/share/trajectory_visualization/environment/: ament_prefix_path.dsv  path.dsv
Event/trajectory_ws/install/trajectory_visualization/share/trajectory_visualization/launch/: visualization.launch.py
Event/trajectory_ws/install/trajectory_visualization/share/trajectory_visualization/rviz/: trajectory.rviz
Event/trajectory_ws/log/: latest_build
Event/trajectory_ws/src/trajectory_visualization/: CMakeLists.txt
Event/trajectory_ws/src/trajectory_visualization/launch/: visualization.launch.py
Event/trajectory_ws/src/trajectory_visualization/rviz/: trajectory.rviz
Event/trajectory_ws/src/trajectory_visualization/src/: copy.cpp  main.cpp
Event/trajectory_ws/src/trajectory_visualization/trajectory_visualization/launch/: visualization.launch.py
IMU_ws/install/: local_setup.sh  setup.sh
IMU_ws/install/IMU_pkg/lib/IMU_pkg/: IMU_node
IMU_ws/install/IMU_pkg/share/IMU_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
IMU_ws/install/IMU_pkg/share/IMU_pkg/cmake/: IMU_pkgConfig-version.cmake  IMU_pkgConfig.cmake
IMU_ws/install/IMU_pkg/share/IMU_pkg/environment/: ament_prefix_path.dsv  path.dsv
IMU_ws/install/IMU_pkg/share/ament_index/resource_index/package_run_dependencies/: IMU_pkg
IMU_ws/install/IMU_pkg/share/ament_index/resource_index/parent_prefix_path/: IMU_pkg
IMU_ws/install/topic_cpp/lib/topic_cpp/: topicpublish  topicsubscribe
IMU_ws/install/topic_cpp/share/ament_index/resource_index/package_run_dependencies/: topic_cpp
IMU_ws/install/topic_cpp/share/topic_cpp/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.xml
IMU_ws/install/topic_cpp/share/topic_cpp/cmake/: topic_cppConfig-version.cmake  topic_cppConfig.cmake
IMU_ws/install/topic_cpp/share/topic_cpp/environment/: ament_prefix_path.dsv  path.dsv
IMU_ws/log/: latest_build
IMU_ws/src/IMU_pkg/: CMakeLists.txt
IMU_ws/src/IMU_pkg/include/IMU_pkg/: IMUSerialReader.h
IMU_ws/src/IMU_pkg/src/: IMUSerialReader.cpp  IMU_node.cpp
IMU_ws/topic_ws/install/: local_setup.sh
IMU_ws/topic_ws/install/topic_cpp/lib/topic_cpp/: topicsubscribe
IMU_ws/topic_ws/install/topic_cpp/share/topic_cpp/: local_setup.dsv  package.sh  package.xml  package.zsh
IMU_ws/topic_ws/log/: latest_build
IMU_ws/topic_ws/src/topic_cpp/: CMakeLists.txt
IMU_ws/topic_ws/src/topic_cpp/src/: topicsubscribe.cpp
autobash/: build_ros2_ws.sh  clean_ws.sh  create_ros2_ws.sh
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/my_cpp_pkg/lib/my_cpp_pkg/: my_node
ros2_ws/install/my_cpp_pkg/share/my_cpp_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws/install/my_cpp_pkg/share/my_cpp_pkg/cmake/: my_cpp_pkgConfig-version.cmake  my_cpp_pkgConfig.cmake
ros2_ws/install/my_cpp_pkg/share/my_cpp_pkg/environment/: ament_prefix_path.dsv  path.dsv
ros2_ws/log/: latest_build
ros2_ws/src/my_cpp_pkg/: CMakeLists.txt
ros2_ws/src/my_cpp_pkg/src/: my_node.cpp
topic_ws/: source.sh
topic_ws/install/: local_setup.sh  setup.sh
topic_ws/install/topic_cpp/lib/topic_cpp/: topicpublish
topic_ws/install/topic_cpp/share/topic_cpp/: local_setup.bash  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh
topic_ws/log/: latest_build
topic_ws/src/topic_cpp/: CMakeLists.txt
topic_ws/src/topic_cpp/src/: topicpublish.cpp  topicsubscribe.cpp
usrmsg_ws/: clean_ws.sh
usrmsg_ws/install/: local_setup.sh  setup.sh
usrmsg_ws/install/baseinterface_pkg/lib/baseinterface_pkg/: baseinterface_node
usrmsg_ws/install/baseinterface_pkg/share/baseinterface_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
usrmsg_ws/install/baseinterface_pkg/share/baseinterface_pkg/cmake/: ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  baseinterface_pkgConfig.cmake  baseinterface_pkg__rosidl_typesupport_cExport-noconfig.cmake  baseinterface_pkg__rosidl_typesupport_cExport.cmake  baseinterface_pkg__rosidl_typesupport_introspection_cExport-noconfig.cmake  export_baseinterface_pkg__rosidl_generator_cExport.cmake  export_baseinterface_pkg__rosidl_generator_cppExport.cmake  export_baseinterface_pkg__rosidl_generator_pyExport.cmake  export_baseinterface_pkg__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_baseinterface_pkg__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
usrmsg_ws/install/baseinterface_pkg/share/baseinterface_pkg/msg/: Usrmsg.idl
usrmsg_ws/log/: latest_build
usrmsg_ws/src/baseinterface_pkg/: CMakeLists.txt
usrmsg_ws/src/baseinterface_pkg/msg/: Usrmsg.msg
usrmsg_ws/src/baseinterface_pkg/src/: baseinterface_node.cpp
(+24 files in other folders)
